2013-06-24  Dario Rodriguez <dario@artica.es>

	* integria_db.sql,
	images/calendar_edit.png,
	godmode/setup/setup_mailtemplates.php,
	godmode/setup/setup_auth.php,
	godmode/setup/setup_visual.php,
	godmode/setup/setup_calendar.php,
	godmode/setup/setup.php,
	godmode/setup/incidents_setup.php,
	godmode/setup/setup_mail.php,
	godmode/setup/setup_pandora.php,
	include/functions_calendar.php: Reverted commit due to
	some issues. The developer was noticed to fix the problems.

2013-06-24  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/inventories/inventory_detail.php
	  operation/inventories/inventory_search.php: Used function
	'enterprise_hook'.

2013-06-21  Richard Santaella  <richard.santaella@gmail.com>

        * godmode/setup/setup_calendar.php: Addes especific tab for non-working 
	days management, support for non-working days annually recurring.
        * godmode/setup/incidents_setup.php: Removed non-working days management
        * godmode/setup/incidents_setup.php,
	godmode/setup/setup,
	godmode/setup/setup_auth,
	godmode/setup/setup_mail,
	godmode/setup/setup_mailtemplates,
	godmode/setup/setup_pandora,
	godmode/setup/setup_visual: Modified to show setup_calendar tab
	* include/function_calendar.php: Modified for calculate non-working days
	annually recurring.
	* integria_db.sql: Added columns to tholidays to support 
	for non-working days annually recurring. 
	* images/calendar_edit.png

2013-06-21  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/ajax/inventories.php
	  include/js/integria_inventory.js
	  operation/inventories/inventory_search.php: Clean javascript
	code and fixed errors.

2013-06-21  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/js/integria_inventory.js: Fixed pagination.

2013-06-20 Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php: Fixed an error in function
	"incidents_get_incident_stats" related to holidays calculation
	which ends in a bad performance	of incident search statistic view.
